[tool.poetry]
name = "igracy"
version = "0.0.1"
description = "Interactive Gracy API"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
keywords = ["api", "cli", "http", "https", "async"]
readme = "README.md"
homepage = "https://github.com/guilatrova/igracy"
repository = "https://github.com/guilatrova/igracy"
include = ["LICENSE", "py.typed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [{ include = "igracy", from = "src" }]

[tool.poetry.urls]
"Changelog" = "https://github.com/guilatrova/igracy/blob/main/CHANGELOG.md"


[tool.semantic_release]
version_variable = ["src/igracy/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gracy = { version = "*" }
rich = "^13.7.0"
typing-extensions = { version = "^4.5.0", python = "<3.10" }

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.0"
pre-commit = "^3.5.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
ruff = "^0.1.6"
pyright = "^1.1.338"

[tool.ruff.lint.isort]
extra-standard-library = ["pytest", "httpx"]
required-imports = ["from __future__ import annotations"]

# https://microsoft.github.io/pyright/#/configuration
[tool.pyright]
include = ["src"]
pythonVersion = "3.8"
pythonPlatform = "All"
reportMissingImports = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "src/tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
